--- a/AframeVR/index.html
+++ b/AframeVR/index.html
@@ -18,14 +18,22 @@
         <a-asset-item id="chair" src="assets/chair/scene.gltf"></a-asset-item>
         <a-asset-item id="exportB" src="assets/exports_b/scene.gltf"></a-asset-item>   
         <a-asset-item id="bookshelf" src="assets/four_modern_bookshelves/scene.gltf"></a-asset-item>   
-         <a-asset-item id="bookshelf" src="assets/four_modern_bookshelves/scene.gltf"></a-asset-item>                       
+         <a-asset-item id="office_chair" src="Big_IKEA_Assets/office_chair/scene.gltf"></a-asset-item>   
+         <a-asset-item id="project_living_room" src="Big_IKEA_Assets/project_living_room/scene.gltf"></a-asset-item>     
+         <a-asset-item id="room_interior_designs" src="Big_IKEA_Assets/room_interior_designs/scene.gltf"></a-asset-item>    
+         <a-asset-item id="smart_fridge" src="Big_IKEA_Assets/smart_fridge/scene.gltf"></a-asset-item>       
+       <a-asset-item id="sofa" src="Big_IKEA_Assets/sofa/scene.gltf"></a-asset-item>                         
       </a-assets>
       <a-sky color="#6EBAA7"></a-sky>
 
       <a-entity gltf-model="#chair"></a-entity>
       <a-entity gltf-model="#exportB"></a-entity>
       <a-entity gltf-model="#bookshelf"></a-entity>
-
+            <a-entity gltf-model="#office_chair"></a-entity>
+            <a-entity gltf-model="#sofa"></a-entity>
+            <a-entity gltf-model="#project_living_room"></a-entity>
+            <a-entity gltf-model="#room_interior_designs"></a-entity>
+            <a-entity gltf-model="#smart_fridge"></a-entity>            
 <!--       <a-entity gltf-model="#sce"></a-entity>
       <a-entity gltf-model="#bar"></a-entity>
       <a-entity gltf-model="#buc"></a-entity> -->
