--- a/MunroFolder/index.html
+++ b/MunroFolder/index.html
@@ -11,21 +11,18 @@
   <body>
     <a-scene>
       <a-assets>
-        <a-asset-item id="sce" src="assets/land/scene.gltf"></a-asset-item>
-        <a-asset-item id="bar" src="assets/bard/scene.gltf"></a-asset-item>
-        <a-asset-item id="buc" src="assets/bucket/scene.gltf"></a-asset-item>
         <a-asset-item id="bus" src="assets/bus/scene.gltf"></a-asset-item>
         <a-asset-item id="chair" src="assets/chair/scene.gltf"></a-asset-item>
         <a-asset-item id="exportB" src="assets/exports_b/scene.gltf"></a-asset-item>   
         <a-asset-item id="bookshelf" src="assets/four_modern_bookshelves/scene.gltf"></a-asset-item>   
-         <a-asset-item id="office_chair" src="Big_IKEA_Assets/office_chair/scene.gltf"></a-asset-item>   
-         <a-asset-item id="project_living_room" src="Big_IKEA_Assets/project_living_room/scene.gltf"></a-asset-item>     
-         <a-asset-item id="room_interior_designs" src="Big_IKEA_Assets/room_interior_designs/scene.gltf"></a-asset-item>    
-         <a-asset-item id="smart_fridge" src="Big_IKEA_Assets/smart_fridge/scene.gltf"></a-asset-item>       
-       <a-asset-item id="sofa" src="Big_IKEA_Assets/sofa/scene.gltf">
+        <a-asset-item id="office_chair" src="assets/office_chair/scene.gltf"></a-asset-item>   
+        <a-asset-item id="project_living_room" src="assets/project_living_room/scene.gltf"></a-asset-item>     
+        <a-asset-item id="room_interior_designs" src="assets/room_interior_designs/scene.gltf"></a-asset-item>    
+        <a-asset-item id="smart_fridge" src="assets/smart_fridge/scene.gltf"></a-asset-item>       
+        <a-asset-item id="sofa" src="assets/sofa/scene.gltf">
        </a-asset-item>
 
-        
+      <entity 
       </a-assets>
            <a-plane position="0 -4 0" rotation="-90 0 0" width="100" height="100" color="#acba13"></a-plane>
  
