--- a/AframeVR/index.html
+++ b/AframeVR/index.html
@@ -11,30 +11,31 @@
   <body>
     <a-scene>
       <a-assets>
-        <a-asset-item id="bus" src="assets/bus/scene.gltf"></a-asset-item>
+     <!--    <a-asset-item id="bus" src="assets/bus/scene.gltf"></a-asset-item>
         <a-asset-item id="chair" src="assets/chair/scene.gltf"></a-asset-item>
-        <a-asset-item id="exportB" src="assets/exports_b/scene.gltf"></a-asset-item>   
+        <a-asset-item id="exportB" src="assets/exports_b/scene.gltf"></a-asset-item>    -->
         <a-asset-item id="bookshelf" src="assets/four_modern_bookshelves/scene.gltf"></a-asset-item>   
-         <a-asset-item id="office_chair" src="Big_IKEA_Assets/office_chair/scene.gltf"></a-asset-item>   
-         <a-asset-item id="project_living_room" src="Big_IKEA_Assets/project_living_room/scene.gltf"></a-asset-item>     
-         <a-asset-item id="room_interior_designs" src="Big_IKEA_Assets/room_interior_designs/scene.gltf"></a-asset-item>    
-         <a-asset-item id="smart_fridge" src="Big_IKEA_Assets/smart_fridge/scene.gltf"></a-asset-item>       
-       <a-asset-item id="sofa" src="Big_IKEA_Assets/sofa/scene.gltf">
+         <a-asset-item id="office_chair" src="assets/office_chair/scene.gltf"></a-asset-item>   
+<!--          <a-asset-item id="project_living_room" src="assets/project_living_room/scene.gltf"></a-asset-item>     
+         <a-asset-item id="room_interior_designs" src="assets/room_interior_designs/scene.gltf"></a-asset-item>    
+         <a-asset-item id="smart_fridge" src="assets/smart_fridge/scene.gltf"></a-asset-item>       
+       <a-asset-item id="sofa" src="assets/sofa/scene.gltf"> -->
       </a-assets>
-        <a-entity gltf-model="#chair"></a-entity>
-        <a-entity gltf-model="#exportB"></a-entity>
-        <a-entity gltf-model="#bookshelf"></a-entity>
-        <a-entity gltf-model="#office_shair"></a-entity>
-        <a-entity gltf-model="#project_living_room"></a-entity>
-        <a-entity gltf-model="#sofa"></a-entity>
-        <a-entity gltf-model="#smart_fridge></a-entity>
+    <!--     <a-entity modely0 gltf-model="#chair"></a-entity>
+        <a-entity modely1 gltf-model="#exportB"></a-entity> -->
+        <a-entity modely0 gltf-model="#bookshelf"></a-entity>
+        <a-entity modely1="" gltf-model="#bookshelf" position="-6.07 0 0"></a-entity>
+        <a-entity modely2="" gltf-model="#bookshelf" position="6.07 0 0"></a-entity>
+<!--         <a-entity modely4 gltf-model="#project_living_room"></a-entity>
+ --><!--         <a-entity modely5 gltf-model="#sofa"></a-entity>
+        <a-entity modely6 gltf-model="#smart_fridge"></a-entity> -->
 
            <a-plane position="0 -4 0" rotation="-90 0 0" width="100" height="100" color="#acba13"></a-plane>
  
-      <a-text id="texty" color= "#000000" value= ""></a-text>
+      <a-text id="texty" position="-5 0 0" color= "#000000" value= ""></a-text>
 <!--      <a-entity texty  id="texty" text="value: Hello World;" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-entity>   -->    
-      <a-entity modely id="modely" gltf-model= "#bookshelf" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-entity>         
-      <a-camera>
+<!--       <a-entity modely id="modely" gltf-model= "#bookshelf" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-entity>         
+ -->      <a-camera>
         <a-cursor>
         </a-cursor>
       </a-camera>      
