--- a/AframeVR/index.html
+++ b/AframeVR/index.html
@@ -11,21 +11,25 @@
   <body>
     <a-scene>
       <a-assets>
-     <!--    <a-asset-item id="bus" src="assets/bus/scene.gltf"></a-asset-item>
-        <a-asset-item id="chair" src="assets/chair/scene.gltf"></a-asset-item>
-        <a-asset-item id="exportB" src="assets/exports_b/scene.gltf"></a-asset-item>    -->
-        <a-asset-item id="bookshelf" src="assets/four_modern_bookshelves/scene.gltf"></a-asset-item>   
+        <a-asset-item id="bus" src="assets/bus/scene.gltf"></a-asset-item>
+        <a-asset-item id="chair" src="assets/cover_chair/scene.gltf"></a-asset-item>
+<!--         <a-asset-item id="exportB" src="assets/exports_b/scene.gltf"></a-asset-item>   
+ -->        <a-asset-item id="bookshelf" src="assets/four_modern_bookshelves/scene.gltf"></a-asset-item>   
          <a-asset-item id="office_chair" src="assets/office_chair/scene.gltf"></a-asset-item>   
 <!--          <a-asset-item id="project_living_room" src="assets/project_living_room/scene.gltf"></a-asset-item>     
-         <a-asset-item id="room_interior_designs" src="assets/room_interior_designs/scene.gltf"></a-asset-item>    
+         <a-asset-item id="room_interior_designs" src="assets/room_interior_designs/scene.gltf"></a-asset-item>    --> 
          <a-asset-item id="smart_fridge" src="assets/smart_fridge/scene.gltf"></a-asset-item>       
-       <a-asset-item id="sofa" src="assets/sofa/scene.gltf"> -->
+<!--        <a-asset-item id="sofa" src="assets/sofa/scene.gltf"> -->
       </a-assets>
     <!--     <a-entity modely0 gltf-model="#chair"></a-entity>
         <a-entity modely1 gltf-model="#exportB"></a-entity> -->
         <a-entity modely0 gltf-model="#bookshelf"></a-entity>
-        <a-entity modely1="" gltf-model="#bookshelf" position="-6.07 0 0"></a-entity>
-        <a-entity modely2="" gltf-model="#bookshelf" position="6.07 0 0"></a-entity>
+        <a-entity modely1="" gltf-model="#smart_fridge" position="-6.07 0 0"></a-entity>
+        <a-entity modely2="" gltf-model="#chair" position="6.07 0 0"></a-entity>
+
+        
+<!--                 <a-entity modely3="" gltf-model="#office_chair" position="6.07 0 4"></a-entity>
+ -->
 <!--         <a-entity modely4 gltf-model="#project_living_room"></a-entity>
  --><!--         <a-entity modely5 gltf-model="#sofa"></a-entity>
         <a-entity modely6 gltf-model="#smart_fridge"></a-entity> -->
